--- a/Components/Control/_Layout.cshtml
+++ b/Components/Control/_Layout.cshtml
@@ -1,4 +1,10 @@
 ﻿@{
+    
+    HttpCookie aCookie = new HttpCookie("lastVisit");
+    aCookie.Value = DateTime.Now.ToString();
+    aCookie.Expires = DateTime.Now.AddMonths(3);
+    Response.Cookies.Add(aCookie);
+
     var menulink = new string[7] {"/Components/Control/Default", "/Components/Control/AllPages", "/Components/Control/NewPage", "/Components/Control/SiteMenu", "/Components/Control/Editor", "/Components/Control/Settings", "/Components/Control/UserSettings"};
 }
 
@@ -9,12 +15,82 @@
     <meta charset="utf-8" />
     <title>@Page.Title - Ceres Project</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="~/Components/ui/css/Global.css" rel="stylesheet"/>
-    <link href="~/Components/ui/css/ControlPanel.css" rel="stylesheet"/>
-    <link href="~/Components/ui/css/grid-control.css" rel="stylesheet"/>
+    <!--<link href="~/Components/ui/css/Global.css" rel="stylesheet"/>-->
+    <link href="~/Components/ui/css/control/cp.css" rel="stylesheet" />
+    <link href="~/Components/ui/css/grid-control.css" rel="stylesheet" />
+    <!--[if gte IE 9]><style>.i-header-name-text{filter: none;}</style><![endif]-->
     <script src="//code.jquery.com/jquery-1.9.0.min.js"></script>
+    @RenderSection("Head", false)
 </head>
 <body>
+    <div class="b-page">
+        <div class="b-header">
+            <div class="b-header-logo">
+                <div class="b-header-logo-app">
+                    <a class="i-header-logo-app-link" href="~/">Ceres Project</a>
+                </div>
+                <div class="b-header-logo-site">
+                    <a class="i-header-logo-site-link" href="~/">Ваш сайт</a>
+                </div>
+            </div>
+            <div class="b-header-user">
+                Пользователь: @WebSecurity.CurrentUserName | <a href="~/Account/Logout">Выйти</a>
+            </div>
+            <div class="b-header-name">
+                <h1 class="i-header-name-text">
+                    @Page.Title
+                </h1>
+            </div>
+        </div>
+        <div class="b-content">
+            <div class="b-main">
+                @RenderBody()
+            </div>
+        </div>
+        <div class="b-nav">
+            <ul class="b-nav-menu">
+                <li class="b-nav-menu-item i-nav-menu-home">
+                    <a class="i-nav-menu-home-link i-nav-menu-link @if (Request.Url.LocalPath == menulink[0])
+                                                                   {<text>selected</text>}" href="~/Components/Control/Default">Главная страница</a>
+                </li>
+                <li class="b-nav-menu-item i-nav-menu-pages">
+                    <a class="i-nav-menu-pages-link i-nav-menu-link @if (Request.Url.LocalPath == menulink[1])
+                                                                    {<text>selected</text>}" href="~/Components/Control/AllPages">Все страницы</a>
+                </li>
+                <li class="b-nav-menu-item i-nav-menu-newpage">
+                    <a class="i-nav-menu-newpage-link i-nav-menu-link @if (Request.Url.LocalPath == menulink[2])
+                                                                      {<text>selected</text>}" href="~/Components/Control/NewPage">Новая страница</a>
+                </li>
+                <li class="b-nav-menu-item i-nav-menu-nav">
+                    <a class="i-nav-menu-nav-link i-nav-menu-link @if (Request.Url.LocalPath == menulink[3])
+                                                                  {<text>selected</text>}" href="~/Components/Control/SiteMenu">Меню сайта</a>
+                </li>
+                <li class="b-nav-menu-item i-nav-menu-editor">
+                    <a class="i-nav-menu-editor-link i-nav-menu-link @if (Request.Url.LocalPath == menulink[4])
+                                                                     {<text>selected</text>}" href="~/Components/Control/Editor">Редактор файлов</a>
+                </li>
+                <li class="b-nav-menu-item i-nav-menu-settings">
+                    <a class="i-nav-menu-settings-link i-nav-menu-link @if (Request.Url.LocalPath == menulink[5])
+                                                                       {<text>selected</text>}" href="~/Components/Control/Settings">Настройки</a>
+                </li>
+                <li class="b-nav-menu-item i-nav-menu-settings">
+                    <a class="i-nav-menu-settings-link i-nav-menu-link @if (Request.Url.LocalPath == menulink[6])
+                                                                       {<text>selected</text>}" href="~/Components/Control/UserSettings">Настройки аккаунта</a>
+                </li>
+            </ul>
+            <div style="height: 400px;"></div>
+        </div>
+
+    </div>
+    <div class="b-bottom">
+        <div class="b-bottom-logo">
+        </div>
+        <div class="b-bottom-copy">
+
+            @DateTime.Now.Year © World Fly development team
+        </div>
+    </div>
+    @*
 
 <div class="Page">
     <div class="header">
@@ -27,10 +103,11 @@
                 
             </div>
         </div>
+        <div class="login">Пользователь: @WebSecurity.CurrentUserName | <a href="~/Account/Logout">Выйти</a></div>
         <h1 class="page-title">
             @Page.Title
         </h1>
-        @WebSecurity.CurrentUserName
+        
     </div>
     <div class="content">
         <div class="main">
@@ -75,8 +152,12 @@
     <div class="copyright">
         @DateTime.Now.Year © World Fly development team
     </div>
-</div>
-    <script>new Image().src = "//counter.yadro.ru/hit?r" + escape(document.referrer) + ((typeof(screen)=="undefined")?"" : ";s"+screen.width+"*"+screen.height+"*" + (screen.colorDepth?screen.colorDepth:screen.pixelDepth)) + ";u"+escape(document.URL) + ";h"+escape(document.title.substring(0,80)) + ";" +Math.random();</script>
+    
+</div>*@
+
+
+    <script src="~/Components/ui/js/admin.js"></script>
+    <script>new Image().src = "//counter.yadro.ru/hit?r" + escape(document.referrer) + ((typeof (screen) == "undefined") ? "" : ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ? screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) + ";h" + escape(document.title.substring(0, 80)) + ";" + Math.random();</script>
 
 </body>
 </html>
