--- a/Components/Control/Settings.cshtml
+++ b/Components/Control/Settings.cshtml
@@ -59,14 +59,57 @@
 
     }
     
+    
+}
+@section Head{
+    <style>
+        .b-tabs {
+            padding: 20px 0 10px 0;
+            width: 100%;
+            border-bottom: 1px solid;
+        }
+        .b-tabs-list {
+            list-style: none;
+            display: inline;
+        }
+        .b-tabs-list-item {
+            display: inherit;
+            border-left: 1px solid;
+            border-top: 1px solid;
+            border-right: 1px solid;
+            margin: 0 5px 0 0;
+            padding: 6px 7px 10px 6px;
+            -webkit-border-top-left-radius: 5px;
+            -webkit-border-top-right-radius: 5px;
+            -moz-border-radius-topleft: 5px;
+            -moz-border-radius-topright: 5px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+        .i-tabs-link-item-link {
+            border-bottom: 0 none;
+        }
+    </style>
 }
 @errorm
+
+<div class="b-tabs">
+    <ul class="b-tabs-list">
+        <li class="b-tabs-list-item active">
+            <a class="i-tabs-link-item-link" href="Settings">Сайт</a>
+        </li>
+        <li class="b-tabs-list-item" style="width: 100px;">
+            <a class="i-tabs-link-item-link"  href="UserSettings">Аккаунт</a>
+        </li>
+    </ul>
+</div>
+
 <form action="@Request.Url" method="post">
     @AntiForgery.GetHtml()
    <table>
         <tbody>
             <tr>
-                <td class="table-label">
+                <td class="b-table-label">
                     <label for="sitename">Название сайта:</label>
                 </td>
                 <td>
@@ -74,7 +117,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="table-label">
+                <td class="b-table-label">
                    <label for="sitelang">Язык сайта:</label>
                 </td>
                 <td>
@@ -82,7 +125,7 @@
                 </td>
             </tr>
             <tr>
-                <td class="table-label">
+                <td class="b-table-label">
                     <label for="pagesepr">Разделитель названия страницы:</label>
                 </td>
                 <td>
@@ -90,18 +133,18 @@
                 </td>
             </tr>
         <tr>
-                <td class="table-label">
+                <td class="b-table-label">
                     <label for="sitemeta">Мета данные:</label>
                 </td>
                 <td>
                     <input class="meta" id="sitemeta" type="checkbox" @Html.Raw(dmetavalue) name="sitemeta"/>
             @if(data.SiteMeta == "on"){
-            <span class="text-tiny">← Подумайте перед тем как выключать</span>
+            <span class="i-text-tiny">← Подумайте перед тем как выключать</span>
             } 
                 </td>
             </tr>
         <tr>
-                <td class="table-label">
+                <td class="b-table-label">
                     <label for="keywords">Ключевые слова сайта:</label>
                 </td>
                 <td>
@@ -109,17 +152,17 @@
                 </td>
             </tr>
         <tr>
-                <td class="table-label">
+                <td class="b-table-label">
                     <label for="sitestat">Отправка общей статистики:</label>
                 </td>
                 <td>
                     <input id="sitestat" class="stat" type="checkbox" @Html.Raw(dstatvalue) name="sitestat"/> 
             
-            <span class="text-tiny">← Это помогает развитию проекта</span>
+            <span class="i-text-tiny">← Это помогает развитию проекта</span>
                 </td>
             </tr>
         <tr>
-                <td class="table-label">
+                <td class="b-table-label">
                     <label  for="sitestatcode">Код вашей статистики:</label>
                 </td>
                 <td>
@@ -127,60 +170,12 @@
                 </td>
             </tr>
         <tr>
-                <td class="table-label">
+                <td class="b-table-label">
                     <input type="submit" class="btn" value="Сохранить"/>
                 </td>
                 
             </tr>
         </tbody>
    </table>
-    
-    @*<ol>
-        <li>
-            <label for="sitename">Название сайта:</label>
-            
-        </li>
-        <li>
-            <label for="sitelang">Язык сайта:</label>
-            <input id="sitelang" type="text" name="sitelang" value="@dlang.SetValue"/>
-           
-        </li>
-        <li>
-            <label for="pagesepr">@dps.SetDescr:</label>
-            <input id="pagesepr" type="text" name="pagesepr" value="@dps.SetValue"/>
-        </li>
-        <li>
-            <label for="sitemeta">@dmeta.SetDescr:
-            <input class="meta" id="sitemeta" type="checkbox" @Html.Raw(dmetavalue) name="sitemeta"/> </label>
-            @if(dmeta.SetValue == "on"){
-            <span class="text-tiny">← Подумайте перед тем как выключать</span>
-            } 
-        </li>
-        <li>
-            <label for="keywords">Ключевые слова сайта:</label>
-            <input id="keywords" type="text"  name="keywords" value="@ddkeyw.SetValue"/>
-           
-        </li>
-        <li>
-            <label for="sitestat">Отправка общей статистики:</label>
-            <input id="sitestat" class="stat" type="checkbox" @Html.Raw(dstatvalue) name="sitestat"/> 
-            
-            <span class="text-tiny">← Это помогает развитию проекта</span>
-            
-        </li>
-        <li>
-            <label  for="sitestatcode">Код вашей статистики:</label>
-            
-            <textarea id="sitestatcode" name="sitestatcode">@dstatcode.SetValue</textarea>
-           
-        </li>
-        <li>
-            <label for="logo">Ключевые слова сайта:</label>
-            <input type="file" name="logo"/>
-           
-        </li>
-        <li>
-        <input type="submit" class="btn" value="Сохранить"/>
-        </li>
-    </ol>*@
+
 </form>
