--- a/Components/Layouts/_lMaster.cshtml
+++ b/Components/Layouts/_lMaster.cshtml
@@ -14,7 +14,7 @@
         <title>@Page.Title @data.PageNameSep @data.SiteName</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
-
+        <link href="~/Components/ui/css/Global.css" rel="stylesheet"/>
         @if(data.SiteMeta == "on"){
         <meta name="description" content="@Page.Description"/>
         <meta name="keywords" content="@Page.Keywords, @data.SiteKeywords"/>
