--- a/Components/ui/css/grid-control.css
+++ b/Components/ui/css/grid-control.css
@@ -1,25 +1,72 @@
-.Grid {font: 14px; width: 100%;margin: 5px 0 10px 0;   border: 1px solid #cccccc;border-collapse: separate;*border-collapse: collapse;border-left: 0;  -webkit-border-radius: 4px;
-     -moz-border-radius: 4px;
-          border-radius: 4px; border-collapse:collapse; }
-    .Grid td { padding: 2px; padding:5px; border: 1px dashed #cccccc; border-left: 1px solid #cccccc; /*color: #717171;*/ }
-    .Grid th { padding: 4px 2px; border: 1px solid #cccccc; }
-        .Grid th a{ text-decoration:none;}
-/*.Grid .alt { background: #fcfcfc url(/Components/ui/images/grid/control/grd_alt.png) repeat-x top; }*/
-.Grid .grid-pgr {background: #424242 url(/Components/ui/images/grid/control/grd_pgr.png) repeat-x top; }
-    .Grid .grid-pgr table { margin: 5px 0; }
-    .Grid .grid-pgr td { border-width: 0; padding: 0 6px; border-left: solid 1px #666; font-weight: bold; color: #fff; line-height: 25px; }   
-    .Grid .grid-pgr a { color: #666; text-decoration: none; }
-    .Grid .grid-pgr a:hover { color: #000; text-decoration: none; }
-    
-.grid-GB { width: 200px; font-weight:bold;} 
-
-.table tbody + tbody {
-  border-top: 2px solid #cccccc;
+.Grid {
+    font: 14px;
+    width: 100%;
+    margin: 5px 0 10px 0;
+    border: 1px solid #cccccc;
+    border-collapse: separate;
+    *border-collapse: collapse;
+    border-left: 0;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+    border-collapse: collapse;
 }
 
-.grid-ctrl-ico{
+    .Grid td {
+        padding: 2px;
+        padding: 5px;
+        border: 1px dashed #cccccc;
+        border-left: 1px solid #cccccc; /*color: #717171;*/
+    }
+
+    .Grid th {
+        padding: 4px 2px;
+        border: 1px solid #cccccc;
+    }
+
+        .Grid th a {
+            text-decoration: none;
+        }
+    /*.Grid .alt { background: #fcfcfc url(/Components/ui/images/grid/control/grd_alt.png) repeat-x top; }*/
+    .Grid .grid-pgr {
+        background: #424242 url(/Components/ui/images/grid/control/grd_pgr.png) repeat-x top;
+    }
+
+        .Grid .grid-pgr table {
+            margin: 5px 0;
+        }
+
+        .Grid .grid-pgr td {
+            border-width: 0;
+            padding: 0 6px;
+            border-left: solid 1px #666;
+            font-weight: bold;
+            color: #fff;
+            line-height: 25px;
+        }
+
+        .Grid .grid-pgr a {
+            color: #666;
+            text-decoration: none;
+        }
+
+            .Grid .grid-pgr a:hover {
+                color: #000;
+                text-decoration: none;
+            }
+
+.grid-GB {
+    width: 200px;
+    font-weight: bold;
+}
+
+.table tbody + tbody {
+    border-top: 2px solid #cccccc;
+}
+
+.grid-ctrl-ico {
     font-size: 20px;
-    text-decoration: none;
+    border-bottom: 0 none;
     font-weight: 900;
     cursor: pointer;
 }
@@ -28,20 +75,21 @@
     color: red;
 }
 
-.grid-con{
+.grid-con, .grid-con:link, .grid-con:visited {
     color: #0f6802;
     font-size: 22px;
 }
 
-.grid-con:hover{
-    color: red;
-}
+    .grid-con:hover {
+        color: red;
+    }
 
-.Grid th a{
+.Grid th a {
     color: #0000ff;
     border-bottom: 1px dashed #0000ff;
 }
-.Grid th a:hover{
-    color: #f00;
-    border-bottom: 1px dashed #f00;
-}
+
+    .Grid th a:hover {
+        color: #f00;
+        border-bottom: 1px dashed #f00;
+    }
