Adding new feature
Adding PassField

--- a/Components/Control/UserSettings.cshtml
+++ b/Components/Control/UserSettings.cshtml
@@ -71,3 +71,10 @@
 </form>
 
 Последнее посещение @lastVisit
+
+
+<script type="text/javascript">
+$("#Password").passField({
+    acceptRate: 1
+});
+</script>
