--- a/Components/Control/_Layout.cshtml
+++ b/Components/Control/_Layout.cshtml
@@ -18,6 +18,7 @@
     <!--<link href="~/Components/ui/css/Global.css" rel="stylesheet"/>-->
     <link href="~/Components/ui/css/control/cp.css" rel="stylesheet" />
     <link href="~/Components/ui/css/grid-control.css" rel="stylesheet" />
+    <link rel="stylesheet" href="~/Components/ui/css/passfield.min.css" />
     <!--[if gte IE 9]><style>.i-header-name-text{filter: none;}</style><![endif]-->
     <script src="//code.jquery.com/jquery-1.9.0.min.js"></script>
     @RenderSection("Head", false)
@@ -155,7 +156,7 @@
     
 </div>*@
 
-
+    <script src="~/Components/ui/js/passfield.min.js"></script>
     <script src="~/Components/ui/js/admin.js"></script>
     <script>new Image().src = "//counter.yadro.ru/hit?r" + escape(document.referrer) + ((typeof (screen) == "undefined") ? "" : ";s" + screen.width + "*" + screen.height + "*" + (screen.colorDepth ? screen.colorDepth : screen.pixelDepth)) + ";u" + escape(document.URL) + ";h" + escape(document.title.substring(0, 80)) + ";" + Math.random();</script>
 
