--- a/Components/Control/_PageStart.cshtml
+++ b/Components/Control/_PageStart.cshtml
@@ -1,4 +1,4 @@
 ﻿@{
-    Layout = "~/Components/Control/_Layout.cshtml";
+    Layout = "~/Components/Control/_Layout.cshtml"; // Layout of all pages of the catalog
     
 }
